# simple_dic

./: Cargo.toml  README.md
src/: lib.rs
